once again allow configuring request buffer size using parameters